--- a/application/Django_refrigerator_project/static/css/fridge_card.css
+++ b/application/Django_refrigerator_project/static/css/fridge_card.css
@@ -1,14 +1,14 @@
-/* a tag is for links 
+/* a tag is for links */
 
 a{
   color: black;
 }
-/* a:hover is the color of links when hovered over with mouse 
+/* a:hover is the color of links when hovered over with mouse */
 
 a:hover{
   color: black;
 }
-/* a:active, when link clicked, color change flashes */
+/* a:active, when link clicked, color change flashes 
 
 a:active {
   color: #3a4750;
@@ -32,7 +32,8 @@ a:active {
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 10px;
-  background-color: 00adb5;
+  color: black;
+  
 }
 
 /*.column and .row are for inside the dropdown card*/
